<resources>
    <string name="app_name">APP INMO</string>
    <string name="title_all">AVISOS</string>
    <string name="title_map">MAPA</string>
    <string name="title_m_all">MIS AVISOS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_my_publications">Nuevo Aviso</string>

    <!-- Strings related to login -->
    <string name="prompt_precio">Precio(Bs.)(*)</string>
    <string name="prompt_direccion">Direccion</string>
    <string name="prompt_telefono">Telefono(*)</string>
    <string name="prompt_descripcion">Descripcion(*)</string>
    <string name="prompt_sub_categoria">Categoria(*)</string>
    <string name="prompt_tipo">Tipo(*)</string>
    <string name="prompt_transaccion">Transaccion(*)</string>
    <string name="prompt_ubicacion">Ubicacion</string>
    <string name="prompt_foto">Foto</string>


    <string name="confirmation">Confirmacion</string>
    <string name="delete_messaje">Esta seguro de eliminar?</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_menu_cuenta">Administrar Cuenta</string>
    <string name="title_menu_agregar">Agregar</string>
    <string name="title_menu_search">Buscar</string>
    <string name="title_activity_admin_cuenta">Admin Cuenta</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_acc_nombre">Nombre(*)</string>
    <string name="prompt_acc_apaterno">Primer Apellido</string>
    <string name="prompt_acc_amaterno">Segundo Apellido</string>
    <string name="action_add_account">Registrar Cuenta</string>

</resources>
