<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.juan.dcompras01.views.PrincipalView">

    <group android:id="@+id/grp1">
        <item
            android:id="@+id/menu_search"
            android:title="@string/title_menu_search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="always"/>
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/menu_add"
            android:orderInCategory="100"
            android:icon="@mipmap/ic_add_white_24dp"
            android:visible="false"
            android:title="@string/title_menu_agregar"
            app:showAsAction="always">
        </item>
    </group>

    <group android:id="@+id/grp3">
        <item
            android:id="@+id/menu_cuenta"
            android:orderInCategory="100"
            android:title="@string/title_menu_cuenta"
            app:showAsAction="never">
        </item>
    </group>

</menu>
